--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /CSS/CSSTipsAndTricks/nbproject/private/
 /learning-laravel/nbproject/private/
 /laravel-NB-installer/nbproject/private/
+/LaravelTest3/laravel/nbproject/private/
